Standardize the spelling of "X-ray(s)": all with hyphen now

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -66,14 +66,14 @@
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
 \vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860 times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{5.\bibnobreakspace Wave\hyp{}Energy Manifestations}
-\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{\textbf{the visible rays embracing a single octave, number 46}, The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X rays, followed by the γ-rays\fnc{\textbf{γ-rays}, 1955 text: \bibtextul{Y rays}.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
+\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{\textbf{the visible rays embracing a single octave, number 46}, The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnc{\textbf{γ-rays}, 1955 text: \bibtextul{Y rays}.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
 \vs p042 5:2 \pc Wavelike energy manifestations --- from the standpoint of XX century Urantia scientific enlightenment --- may be classified into the following 10 groups:
 \vs p042 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Infraultimatonic rays ---} the borderland revolutions of ultimatons as they begin to assume definite form. This is the 1\ts{st} stage of emergent energy in which wavelike phenomena can be detected and measured.
 \vs p042 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Ultimatonic rays.} The assembly of energy into the minute spheres of the ultimatons occasions vibrations in the content of space which are discernible and measurable. And long before physicists ever discover the ultimaton, they will undoubtedly detect the phenomena of these rays as they shower in upon Urantia. These short and powerful rays represent the initial activity of the ultimatons as they are slowed down to that point where they veer towards the electronic organization of matter. As the ultimatons aggregate into electrons, condensation occurs with a consequent storage of energy.
 \vs p042 5:5 \ublistelem{3.}\bibnobreakspace \bibemph{The short space rays.} These are the shortest of all purely electronic vibrations and represent the preatomic stage of this form of matter. These rays require extraordinarily high or low temperatures for their production. There are two sorts of these space rays: one attendant upon the birth of atoms and the other indicative of atomic disruption. They emanate in the largest quantities from the densest plane of the superuniverse, the Milky Way, which is also the densest plane of the outer universes.
 \vs p042 5:6 \ublistelem{4.}\bibnobreakspace \bibemph{The electronic stage.} This stage of energy is the basis of all materialization in the 7 superuniverses. When electrons pass from higher to lower energy levels of orbital revolution, quanta are always given off. Orbital shifting of electrons results in the ejection or the absorption of very definite and uniform measurable particles of light\hyp{}energy, while the individual electron always gives up a particle of light\hyp{}energy when subjected to collision. Wavelike energy manifestations also attend upon the performances of the positive bodies and the other members of the electronic stage.
 \vs p042 5:7 \ublistelem{5.}\bibnobreakspace \bibemph{Gamma rays ---} those emanations which characterize the spontaneous dissociation of atomic matter. The best illustration of this form of electronic activity is in the phenomena associated with radium disintegration.
-\vs p042 5:8 \ublistelem{6.}\bibnobreakspace \bibemph{The X\hyp{}ray group.} The next step in the slowing down of the electron yields the various forms of solar X rays together with artificially generated X rays. The electronic charge creates an electric field; movement gives rise to an electric current; the current produces a magnetic field. When an electron is suddenly stopped, the resultant electromagnetic commotion produces the X ray; the X ray is \bibemph{that} disturbance. The solar X rays are identical with those which are mechanically generated for exploring the interior of the human body except that they are a trifle longer.
+\vs p042 5:8 \ublistelem{6.}\bibnobreakspace \bibemph{The X\hyp{}ray group.} The next step in the slowing down of the electron yields the various forms of solar X\hyp{}rays together with artificially generated X\hyp{}rays. The electronic charge creates an electric field; movement gives rise to an electric current; the current produces a magnetic field. When an electron is suddenly stopped, the resultant electromagnetic commotion produces the X\hyp{}ray; the X\hyp{}ray is \bibemph{that} disturbance. The solar X\hyp{}rays are identical with those which are mechanically generated for exploring the interior of the human body except that they are a trifle longer.
 \vs p042 5:9 \ublistelem{7.}\bibnobreakspace \bibemph{The ultraviolet} or chemical rays of sunlight and the various mechanical productions.
 \vs p042 5:10 \ublistelem{8.}\bibnobreakspace \bibemph{The white light ---} the whole visible light of the suns.
 \vs p042 5:11 \ublistelem{9.}\bibnobreakspace \bibemph{Infrared rays ---} the slowing down of electronic activity still nearer the stage of appreciable heat.
@@ -84,7 +84,7 @@
 \vs p042 5:16 Primordial\hyp{}force behaviour does give rise to phenomena which are in many ways analogous to your postulated ether. Space is not empty; the spheres of all space whirl and plunge on through a vast ocean of outspread force\hyp{}energy; neither is the space content of an atom empty. Nevertheless there is no ether, and the very absence of this hypothetical ether enables the inhabited planet to escape falling into the sun and the encircling electron to resist falling into the nucleus.
 \usection{6.\bibnobreakspace Ultimatons, Electrons, and Atoms}
 \vs p042 6:1 While the space charge of universal force is homogeneous and undifferentiated, the organization of evolved energy into matter entails the concentration of energy into discrete masses of definite dimensions and established weight --- precise gravity reaction.
-\vs p042 6:2 Local or linear gravity becomes fully operative with the appearance of the atomic organization of matter. Preatomic matter becomes slightly gravity responsive when activated by X ray and other similar energies, but no measurable linear\hyp{}gravity pull is exerted on free, unattached, and uncharged electronic\hyp{}energy particles or on unassociated ultimatons.
+\vs p042 6:2 Local or linear gravity becomes fully operative with the appearance of the atomic organization of matter. Preatomic matter becomes slightly gravity responsive when activated by X\hyp{}ray and other similar energies, but no measurable linear\hyp{}gravity pull is exerted on free, unattached, and uncharged electronic\hyp{}energy particles or on unassociated ultimatons.
 \vs p042 6:3 \pc Ultimatons function by mutual attraction, responding only to the circular Paradise\hyp{}gravity pull. Without linear\hyp{}gravity response they are thus held in the universal space drift. Ultimatons are capable of accelerating revolutionary velocity to the point of partial antigravity behaviour, but they cannot, independent of force organizers or power directors, attain the critical escape velocity of deindividuation, return to the puissant\hyp{}energy stage. In nature, ultimatons escape the status of physical existence only when participating in the terminal disruption of a cooled\hyp{}off and dying sun.
 \vs p042 6:4 \pc The ultimatons, unknown on Urantia, slow down through many phases of physical activity before they attain the revolutionary\hyp{}energy prerequisites to electronic organization. Ultimatons have three varieties of motion: mutual resistance to cosmic force, individual revolutions of antigravity potential, and the intraelectronic positions of the 100 mutually interassociated ultimatons.
 \vs p042 6:5 Mutual attraction holds 100 ultimatons together in the constitution of the electron; and there are never more nor less than 100 ultimatons in a typical electron. The loss of one or more ultimatons destroys typical electronic identity, thus bringing into existence one of the 10 modified forms of the electron.
