--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -15,7 +15,7 @@
 \vs p077 2:2 \pc The physical members of the Prince’s staff had been constituted sex creatures for the purpose of participating in the plan of procreating offspring embodying the combined qualities of their special order united with those of the selected stock of the Andon tribes, and all of this was in anticipation of the subsequent appearance of Adam. The Life Carriers had planned a new type of mortal embracing the union of the conjoint offspring of the Prince’s staff with the first\hyp{}generation offspring of Adam and Eve. They had thus projected a plan envisioning a new order of planetary creatures whom they hoped would become the teacher\hyp{}rulers of human society. Such beings were designed for social sovereignty, not civil sovereignty. But since this project almost completely miscarried, we shall never know what an aristocracy of benign leadership and matchless culture Urantia was thus deprived of. For when the corporeal staff later reproduced, it was subsequent to the rebellion and after they had been deprived of their connection with the life currents of the system.
 \vs p077 2:3 The postrebellion era on Urantia witnessed many unusual happenings. A great civilization --- the culture of Dalamatia --- was going to pieces. “The Nephilim (Nodites) were on earth in those days, and when these sons of the gods went in to the daughters of men and they bore to them, their children were the ‘mighty men of old,’ the ‘men of renown.’” While hardly “sons of the gods,” the staff and their early descendants were so regarded by the evolutionary mortals of those distant days; even their stature came to be magnified by tradition. This, then, is the origin of the well\hyp{}nigh universal folk tale of the gods who came down to earth and there with the daughters of men begot an ancient race of heroes. And all this legend became further confused with the race mixtures of the later appearing Adamites in the second garden.
 \vs p077 2:4 Since the 100 corporeal members of the Prince’s staff carried germ plasm of the Andonic human strains, it would naturally be expected that, if they engaged in sexual reproduction, their progeny would altogether resemble the offspring of other Andonite parents. But when the 60 rebels of the staff, the followers of Nod, actually engaged in sexual reproduction, their children proved to be far superior in almost every way to both the Andonite and the Sangik peoples. This unexpected excellence characterized not only physical and intellectual qualities but also spiritual capacities.
-\vs p077 2:5 These mutant traits appearing in the first Nodite generation resulted from certain changes which had been wrought in the configuration and in the chemical constituents of the inheritance factors of the Andonic germ plasm. These changes were caused by the presence in the bodies of the staff members of the powerful life\hyp{}maintenance circuits of the Satania system. These life circuits caused the chromosomes of the specialized Urantia pattern to reorganize more after the patterns of the standardized Satania specialization of the ordained Nebadon life manifestation. The technique of this germ plasm metamorphosis by the action of the system life currents is not unlike those procedures whereby Urantia scientists modify the germ plasm of plants and animals by the use of X rays.
+\vs p077 2:5 These mutant traits appearing in the first Nodite generation resulted from certain changes which had been wrought in the configuration and in the chemical constituents of the inheritance factors of the Andonic germ plasm. These changes were caused by the presence in the bodies of the staff members of the powerful life\hyp{}maintenance circuits of the Satania system. These life circuits caused the chromosomes of the specialized Urantia pattern to reorganize more after the patterns of the standardized Satania specialization of the ordained Nebadon life manifestation. The technique of this germ plasm metamorphosis by the action of the system life currents is not unlike those procedures whereby Urantia scientists modify the germ plasm of plants and animals by the use of X\hyp{}rays.
 \vs p077 2:6 Thus did the Nodite peoples arise out of certain peculiar and unexpected modifications occurring in the life plasm which had been transferred from the bodies of the Andonite contributors to those of the corporeal staff members by the Avalon surgeons.
 \vs p077 2:7 \pc It will be recalled that the 100 Andonite germ plasm contributors were in turn made possessors of the organic complement of the tree of life so that the Satania life currents likewise invested their bodies. The 44 modified Andonites who followed the staff into rebellion also mated among themselves and made a great contribution to the better strains of the Nodite people.
 \vs p077 2:8 These two groups, embracing 104 individuals who carried the modified Andonite germ plasm, constitute the ancestry of the Nodites, the 8\ts{th} race to appear on Urantia. And this new feature of human life on Urantia represents another phase of the outworking of the original plan of utilizing this planet as a life\hyp{}modification world, except that this was one of the unforeseen developments.
