--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -39,24 +39,24 @@
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600°\,C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{5.\bibnobreakspace Solar Radiation}
-\vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
+\vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X\hyp{}rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
 \vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million pounds sterling a kilogram.
 \vs p041 5:3 The interior of your sun is a vast X\hyp{}ray generator. The suns are supported from within by the incessant bombardment of these mighty emanations.
 \vs p041 5:4 It requires more than 500,000 years for an X\hyp{}ray\hyp{}stimulated electron to work its way from the very centre of an average sun up to the solar surface, whence it starts out on its space adventure, maybe to warm an inhabited planet, to be captured by a meteor, to participate in the birth of an atom, to be attracted by a highly charged dark island of space, or to find its space flight terminated by a final plunge into the surface of a sun similar to the one of its origin.
-\vs p041 5:5 The X rays of a sun’s interior charge the highly heated and agitated electrons with sufficient energy to carry them out through space, past the hosts of detaining influences of intervening matter and, in spite of divergent gravity attractions, on to the distant spheres of the remote systems. The great energy of velocity required to escape the gravity clutch of a sun is sufficient to ensure that the sunbeam will travel on with unabated velocity until it encounters considerable masses of matter; whereupon it is quickly transformed into heat with the liberation of other energies.
+\vs p041 5:5 The X\hyp{}rays of a sun’s interior charge the highly heated and agitated electrons with sufficient energy to carry them out through space, past the hosts of detaining influences of intervening matter and, in spite of divergent gravity attractions, on to the distant spheres of the remote systems. The great energy of velocity required to escape the gravity clutch of a sun is sufficient to ensure that the sunbeam will travel on with unabated velocity until it encounters considerable masses of matter; whereupon it is quickly transformed into heat with the liberation of other energies.
 \vs p041 5:6 \pc Energy, whether as light or in other forms, in its flight through space moves straight forward. The actual particles of material existence traverse space like a fusillade. They go in a straight and unbroken line or procession except as they are acted on by superior forces, and except as they ever obey the linear\hyp{}gravity pull inherent in material mass and the circular\hyp{}gravity presence of the Isle of Paradise.
 \vs p041 5:7 \pc Solar energy may seem to be propelled in waves, but that is due to the action of coexistent and diverse influences. A given form of organized energy does not proceed in waves but in direct lines. The presence of a second or a third form of force\hyp{}energy may cause the stream under observation to \bibemph{appear} to travel in wavy formation, just as, in a blinding rainstorm accompanied by a heavy wind, the water sometimes appears to fall in sheets or to descend in waves. The raindrops are coming down in a direct line of unbroken procession, but the action of the wind is such as to give the visible appearance of sheets of water and waves of raindrops.
 \vs p041 5:8 The action of certain secondary and other undiscovered energies present in the space regions of your local universe is such that solar\hyp{}light emanations appear to execute certain wavy phenomena as well as to be chopped up into infinitesimal portions of definite length and weight. And, practically considered, that is exactly what happens. You can hardly hope to arrive at a better understanding of the behaviour of light until such a time as you acquire a clearer concept of the interaction and interrelationship of the various space\hyp{}forces and solar energies operating in the space regions of Nebadon. Your present confusion is also due to your incomplete grasp of this problem as it involves the interassociated activities of the personal and nonpersonal control of the master universe --- the presences, the performances, and the co\hyp{}ordination of the Conjoint Actor and the Unqualified Absolute.
 \usection{6.\bibnobreakspace Calcium --- The Wanderer of Space}
 \vs p041 6:1 In deciphering spectral phenomena, it should be remembered that space is not empty; that light, in traversing space, is sometimes slightly modified by the various forms of energy and matter which circulate in all organized space. Some of the lines indicating unknown matter which appear in the spectra of your sun are due to modifications of well\hyp{}known elements which are floating throughout space in shattered form, the atomic casualties of the fierce encounters of the solar elemental battles. Space is pervaded by these wandering derelicts, especially sodium and calcium.
-\vs p041 6:2 Calcium is, in fact, the chief element of the matter\hyp{}permeation of space throughout Orvonton. Our whole superuniverse is sprinkled with minutely pulverized stone. Stone is literally the basic building matter for the planets and spheres of space. The cosmic cloud, the great space blanket, consists for the most part of the modified atoms of calcium. The stone atom is one of the most prevalent and persistent of the elements. It not only endures solar ionization --- splitting --- but persists in an associative identity even after it has been battered by the destructive X rays and shattered by the high solar temperatures. Calcium possesses an individuality and a longevity excelling all of the more common forms of matter.
+\vs p041 6:2 Calcium is, in fact, the chief element of the matter\hyp{}permeation of space throughout Orvonton. Our whole superuniverse is sprinkled with minutely pulverized stone. Stone is literally the basic building matter for the planets and spheres of space. The cosmic cloud, the great space blanket, consists for the most part of the modified atoms of calcium. The stone atom is one of the most prevalent and persistent of the elements. It not only endures solar ionization --- splitting --- but persists in an associative identity even after it has been battered by the destructive X\hyp{}rays and shattered by the high solar temperatures. Calcium possesses an individuality and a longevity excelling all of the more common forms of matter.
 \vs p041 6:3 \pc As your physicists have suspected, these mutilated remnants of solar calcium literally ride the light beams for varied distances, and thus their widespread dissemination throughout space is tremendously facilitated. The sodium atom, under certain modifications, is also capable of light and energy locomotion. The calcium feat is all the more remarkable since this element has almost twice the mass of sodium. Local space\hyp{}permeation by calcium is due to the fact that it escapes from the solar photosphere, in modified form, by literally riding the outgoing sunbeams. Of all the solar elements, calcium, notwithstanding its comparative bulk --- containing as it does 20 revolving electrons --- is the most successful in escaping from the solar interior to the realms of space. This explains why there is a calcium layer, a gaseous stone surface, on the sun 9,600\,km thick; and this despite the fact that 19 lighter elements, and numerous heavier ones, are underneath.
 \vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
 \vs p041 6:5 The agility of this acrobatic calcium electron is indicated by the fact that, when tossed by the temperature\hyp{}X\hyp{}ray solar forces to the circle of the higher orbit, it only remains in that orbit for about $10^{-6}$ seconds; but before the electric\hyp{}gravity power of the atomic nucleus pulls it back into its old orbit, it is able to complete 1,000,000 revolutions about the atomic centre.
 \vs p041 6:6 \pc Your sun has parted with an enormous quantity of its calcium, having lost tremendous amounts during the times of its convulsive eruptions in connection with the formation of the solar system. Much of the solar calcium is now in the outer crust of the sun.
 \vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 3,300°\,C, this temperature being very favourable to the registry of the iron spectrum.
 \usection{7.\bibnobreakspace Sources of Solar Energy}
-\vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X rays. X ray is the great leveler of atomic existence.
+\vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X\hyp{}rays. X\hyp{}ray is the great leveler of atomic existence.
 \vs p041 7:2 The surface temperature of your sun is almost 3,300°\,C, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 19,500,000°\,C in the central regions. (All of these temperatures refer to your Celsius scale.)
 \vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are:
 \vs p041 7:4 \ublistelem{1.}\bibnobreakspace Annihilation of atoms and, eventually, of electrons.
@@ -77,7 +77,7 @@
 \vs p041 8:3 \pc In large suns --- small circular nebulae --- when hydrogen is exhausted and gravity contraction ensues, if such a body is not sufficiently opaque to retain the internal pressure of support for the outer gas regions, then a sudden collapse occurs. The gravity\hyp{}electric changes give origin to vast quantities of tiny particles devoid of electric potential, and such particles readily escape from the solar interior, thus bringing about the collapse of a gigantic sun within a few days. It was such an emigration of these “runaway particles” that occasioned the collapse of the giant nova of the Andromeda nebula about 50 years ago. This vast stellar body collapsed in 40 minutes of Urantia time.
 \vs p041 8:4 As a rule, the vast extrusion of matter continues to exist about the residual cooling sun as extensive clouds of nebular gases. And all this explains the origin of many types of irregular nebulae, such as the Crab nebula, which had its origin about 900 years ago, and which still exhibits the mother sphere as a lone star near the centre of this irregular nebular mass.
 \usection{9.\bibnobreakspace Sun Stability}
-\vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 19,500,000°\,C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
+\vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 19,500,000°\,C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
 \vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near\hyp{}by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
 \vs p041 9:3 \pc Your own solar centre radiates almost $10^{11}$ tons of actual matter annually, while the giant suns lose matter at a prodigious rate during their earlier growth, the first billion years. A sun’s life becomes stable after the maximum of internal temperature is reached, and the subatomic energies begin to be released. And it is just at this critical point that the larger suns are given to convulsive pulsations.
 \vs p041 9:4 Sun stability is wholly dependent on the equilibrium between gravity\hyp{}heat contention --- tremendous pressures counterbalanced by unimagined temperatures. The interior gas elasticity of the suns upholds the overlying layers of varied materials, and when gravity and heat are in equilibrium, the weight of the outer materials exactly equals the temperature pressure of the underlying and interior gases. In many of the younger stars continued gravity condensation produces ever\hyp{}heightening internal temperatures, and as internal heat increases, the interior X\hyp{}ray pressure of supergas winds becomes so great that, in connection with the centrifugal motion, a sun begins to throw its exterior layers off into space, thus redressing the imbalance between gravity and heat.
