Print the List of Figures after TOC

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -12,6 +12,7 @@
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents\null\newpage}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
+\listoffigures\newpage
 \include{tex/intro}\newpage
 \include{tex/p000}
 \include{tex/p001}
